package modelo;

public class ComidaEstandar extends Comida {
    public ComidaEstandar() {
        // Establecer el tipo de comida
        setTipoVuelo(TipoVuelo.ESTANDAR);
    }
}
