package modelo;

public class ComidaPremium extends Comida {
    public ComidaPremium() {
        // Establecer el tipo de comida
        setTipoVuelo(TipoVuelo.PREMIUM);
    }
}
