package modelo;

public enum TipoVuelo {
    ESTANDAR, PREMIUM
}
